<project xmlns="http://maven.apache.org/POM/4.1.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.1.0 http://maven.apache.org/xsd/maven-4.1.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.sap.olingo</groupId>
  <artifactId>processor-parent</artifactId>
  <version>2.5.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <url>https://github.com/SAP/olingo-jpa-processor-v4</url>
  
     <modules>
        <module>jpa</module>
     </modules>
  
      <properties>
        <project.parent.version>2.4.1</project.parent.version>
        <java.version>17</java.version>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.source>17</project.build.source>
        <project.build.target>17</project.build.target>
        <flatten.version>1.7.3</flatten.version>
        <maven.compiler.version>3.15.0</maven.compiler.version>
      </properties>
     <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.version}</version>
                    <configuration>
                        <source>${project.build.source}</source>
                        <target>${project.build.target}</target>
                        <showWarnings>true</showWarnings>
                        <showDeprecation>true</showDeprecation>
                        <compilerArgument>-Xlint:unchecked</compilerArgument>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>
                <plugin>
                       <groupId>org.codehaus.mojo</groupId>
                       <artifactId>flatten-maven-plugin</artifactId>
                       <version>${flatten.version}</version>
                       <configuration>
                         <updatePomFile>true</updatePomFile>
                         <flattenMode>resolveCiFriendliesOnly</flattenMode>
                       </configuration>
                       <executions>
                         <execution>
                           <id>flatten</id>
                           <phase>process-resources</phase>
                           <goals>
                             <goal>flatten</goal>
                           </goals>
                         </execution>
                         <execution>
                           <id>flatten.clean</id>
                           <phase>clean</phase>
                           <goals>
                             <goal>clean</goal>
                           </goals>
                         </execution>
                       </executions>
                 </plugin>                
            </plugins>
        </pluginManagement>
    </build> 
</project>
